--- a/jianzhioffer/jianzhioffer.vcxproj.filters
+++ b/jianzhioffer/jianzhioffer.vcxproj.filters
@@ -18,9 +18,18 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Solution5.h">
+      <Filter>Header Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Solution3.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Solution3_1.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Solution4.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
